<resources>
    <string name="app_name">Simple To Do</string>
    <string name="btnAdd">Add</string>
    <string name="btnClear">Clear</string>
    <string name="btnDelete">Delete</string>
    <string-array name="spinner">
        <item><b>Add</b> a new task</item>
        <item><b>Remove</b> a task</item>
    </string-array>
    <string name="hintAdd">Type in a new task here</string>
    <string name="hintDelete">Type the index of the task to be removed</string>

</resources>